--- a/package.json
+++ b/package.json
@@ -1,18 +1,27 @@
 {
-  "name": "y",
+  "name": "happy",
   "version": "1.0.0",
   "description": "A Vue.js project",
   "author": "muzili0903 <2584167983@qq.com>",
   "private": true,
   "scripts": {
-    "dev": "webpack-dev-server --inline --progress --config build/webpack.dev.conf.js",
+    "dev": "webpack-dev-server --host 0.0.0.0 --inline --progress --config build/webpack.dev.conf.js",
     "start": "npm run dev",
     "lint": "eslint --ext .js,.vue src",
     "build": "node build/build.js"
   },
   "dependencies": {
+    "axios": "^0.21.1",
+    "better-scroll": "^2.2.0",
+    "fastclick": "^1.0.6",
+    "less-loader": "^4.1.0",
+    "stylus": "^0.54.8",
+    "stylus-loader": "^3.0.1",
+    "swiper": "^6.4.6",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-awesome-swiper": "^2.6.7",
+    "vue-router": "^3.5.1",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
